<resources>
    <string name="app_name">ScreenTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="icon_share">&#xf124;</string>
    <string name="india">India</string>
    <string name="canada">Canada</string>
    <string name="uk">United Kingdom</string>
    <string name="us">United States</string>
</resources>
