<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/world_map"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layoutAnimation="@anim/layout_fade_controller"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/layout_controller">
    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/india"
        android:textAlignment="gravity"
        android:gravity="center"
        android:background="@drawable/circle"
        android:id="@+id/india"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/us"
        android:textAlignment="gravity"
        android:gravity="center"
        android:background="@drawable/circle"
        android:id="@+id/US"
        android:layout_below="@+id/canada"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/uk"
        android:textAlignment="gravity"
        android:gravity="center"
        android:background="@drawable/circle"
        android:id="@+id/UK"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/canada"
        android:layout_toEndOf="@+id/canada"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/canada"
        android:textAlignment="gravity"
        android:gravity="center"
        android:background="@drawable/circle"
        android:id="@+id/canada"
        android:layout_below="@+id/UK"
        android:layout_toRightOf="@+id/india"
        android:layout_toEndOf="@+id/india"
        android:textColor="@android:color/white"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Share"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/icon_share"
        android:id="@+id/shareIcon"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />


</RelativeLayout>
